src/test/resources/Fall_21_Test_Cases/Good/LO-0/lvl0-good-medium-3.lo
// test extra parenthesis, string, string operation
String a,b;

{
a = (((("hello world"))));
b = (a * 5);
}