src/test/resources/Fall_21_Test_Cases/Bad/LO-0/lvl0-bad-easy-5.lo
// bad case
String a = "abc";
String b;

{
  b = "Hello World" * "Say Goodbye!";
}
